Fix: (Shimmer on mobile doc center)

--- a/src/components/primitives/shared/document-list/DocumentList.scss
+++ b/src/components/primitives/shared/document-list/DocumentList.scss
@@ -77,4 +77,7 @@
       }
     }
   }
+  .document_shimmer{
+    width: 100%;
+  }
 }
